# mobile_manipulator_algorithms

./: .gitignore  README.md
Arm_Motion_Planning/: ArmMotionPlanning.m  ArmMotionPlanningLissajousPath.m  TestPoints.m  send_data_to_rviz.m
Arm_Motion_Planning/3DPlots/: plotMobPlatArrow.m
Arm_Motion_Planning/Results/: Test2.mat  Test3.mat  TestLissajousPath.mat
Combine_Motion_Planning_Results/: send_data_to_rviz.m
Jacobian_Maple/: AddTo_mFile.txt
MP_Motion_Planning/: FeedbackControl.m  PlotEvolutionPretty.m  path_planning.m  path_planning_parabolic.m
NMM_Motion_Planning/: GetMarsCurrState.m  JointConstraintsReal.m  MM_MotPlan_ManipSine.m  MM_MotPlan_Real.m  MM_MotPlan_Sim_QuinticTrans.m  MM_MotPlan_Sim_QuinticTrans_ManNorm_paper.m  MM_MotPlan_Sim_SineWave.m  Motion_Planning_ElipticPath_ManipComparison.m  Motion_Planning_LissajousPath.m  Motion_Planning_LissajousPath_ManipComparison.m  PlotEvolutionStylesAndColorsLoadData.m  PlotFailedMotionPlanning.m  SaveResults.m  SaveSimResults.m  TestPointsReal.m  errorFromQuats.m  jointVelLimScale.m  manGradJ2.m  manGradJBar2.m  manipQuinticTrans.m  sigmoidTrapezoidal.m
mars_visualization_launcher/: init_mars_rviz_display.sh  mars_visualize.desktop
ros_kin_tests/: set_MARS_pos_rviz.m
ros_ws/src/mars_description/: package.xml
ros_ws/src/mars_description/config/: mars_start_pos.yaml  properties.yaml
ros_ws/src/mars_description/launch/: test.launch
ros_ws/src/mars_description/meshes/: cubi-prism_plate.dae
ros_ws/src/mars_description/urdf/: mars_robot.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
(+2014 files in other folders)
