<?xml version="1.0"?>
<package>
  <name>mars_description</name>
  <version>0.0.1</version>
  <description>
    URDF description of MARS
  </description>

  <author>Josuet Leoro</author>
  <author email="jl2005ec@gmail.com">Josuet Leoro</author>
  <maintainer email="jl2005ec@gmail.com">Josuet Leoro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>urdf</run_depend>

  <export>
  </export>
</package>
